# tool-new-release

./: Cargo.toml  README.md
.github/workflows/: ci.yml  cross_compile.yml  release.yml
src/: args.rs  cli.rs  clone.rs  main.rs  pipeline.rs  repo.rs  utils.rs
src/git/: add.rs  clone.rs  commit.rs  push.rs
src/glitch/: push.rs
src/projects/: api.rs  blog_post.rs  bot.rs  glitch.rs  guides.rs  guides_content.rs  guides_search.rs  release_pages.rs  wikipedia.rs
src/utils/: clone.rs  heroku.rs  op.rs  prompt.rs  versions.rs
