[package]
name = "tool-new-release"
version = "0.1.0"
authors = ["Ricardo Mendes <rokusu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
tempfile = "3.1.0"
structopt = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
rfm = "0.6.0"
zip = "0.5.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dialoguer = "0.7.1"
semver = "0.11.0"
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
