[package]
name = "tool-new-release"
version = "0.1.0"
authors = ["Ricardo Mendes <rokusu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z" # Optimize for size.
codegen-units = 1
panic = "abort"

[dependencies]
git2 = "0.13"
tempfile = "3.1.0"
structopt = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
rfm = "0.6.0"
zip = "0.5.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dialoguer = "0.7.1"
semver = "0.11.0"
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
chrono = "0.4.19"
toml = "0.5.9"
serde_yaml = "0.8.17"
fs_extra = "1.2.0"
