[package]
name = "tool-new-release"
version = "0.1.0"
authors = ["Ricardo Mendes <rokusu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"

[dependencies]
git2 = "0.13"
tempfile = "3.1.0"
structopt = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
rfm = "0.6.0"
zip = "0.5.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "^1.0.17"
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
chrono = "0.4.19"
toml = "0.5.9"
clap = { version = "4.1.1", features = ["derive"] }
dirs = "5.0.1"
regex = "1.8.4"
